--- a/src/Unity-Building-Blocks-Stream-master/Packages/manifest.json
+++ b/src/Unity-Building-Blocks-Stream-master/Packages/manifest.json
@@ -1,8 +1,9 @@
 {
   "dependencies": {
+    "com.unity.ide.visualstudio": "2.0.0",
     "com.unity.inputsystem": "1.0.0-preview.6",
-    "com.unity.render-pipelines.universal": "7.1.8",
-    "com.unity.textmeshpro": "2.0.1",
+    "com.unity.render-pipelines.universal": "8.0.1",
+    "com.unity.textmeshpro": "3.0.0-preview.1",
     "com.unity.ugui": "1.0.0",
     "com.unity.modules.ai": "1.0.0",
     "com.unity.modules.androidjni": "1.0.0",
