--- a/src/sandbox01/Packages/manifest.json
+++ b/src/sandbox01/Packages/manifest.json
@@ -3,6 +3,7 @@
     "com.unity.collab-proxy": "1.3.7",
     "com.unity.ide.visualstudio": "2.0.0",
     "com.unity.inputsystem": "1.0.0-preview.6",
+    "com.unity.render-pipelines.universal": "8.0.1",
     "com.unity.test-framework": "1.1.13",
     "com.unity.textmeshpro": "3.0.0-preview.1",
     "com.unity.timeline": "1.3.1",
