sample 6 fixing missing images

--- a/src/sandbox01/Assembly-CSharp.csproj
+++ b/src/sandbox01/Assembly-CSharp.csproj
@@ -82,7 +82,9 @@
     <Compile Include="Assets\Scripts\Sample6\CustomPageRoute.cs" />
     <Compile Include="Assets\Scripts\Sample6\Router.cs" />
     <Compile Include="Assets\Scripts\Sample6\Sample6LayoutRoot.cs" />
+    <Compile Include="Assets\Scripts\Sample6\Screens\MainScreen.cs" />
     <Compile Include="Assets\Scripts\Sample6\Screens\RootScreen.cs" />
+    <Compile Include="Assets\Scripts\Shared\CColors.cs" />
     <Compile Include="Assets\Scripts\TargetHandler.cs" />
   </ItemGroup>
   <ItemGroup>
