--- a/src/sandbox01/Assembly-CSharp.csproj
+++ b/src/sandbox01/Assembly-CSharp.csproj
@@ -84,10 +84,12 @@
     <Compile Include="Assets\Scripts\Sample6\Sample6LayoutRoot.cs" />
     <Compile Include="Assets\Scripts\Sample6\Screens\MainScreen.cs" />
     <Compile Include="Assets\Scripts\Sample6\Screens\RootScreen.cs" />
+    <Compile Include="Assets\Scripts\Sample7\EditorWindowA.cs" />
     <Compile Include="Assets\Scripts\Shared\CColors.cs" />
     <Compile Include="Assets\Scripts\TargetHandler.cs" />
   </ItemGroup>
   <ItemGroup>
+     <None Include="Assets\Scripts\Sample7\EditorWindowA.uxml" />
     <Reference Include="Unity.RenderPipeline.Universal.ShaderLibrary">
       <HintPath>Library\ScriptAssemblies\Unity.RenderPipeline.Universal.ShaderLibrary.dll</HintPath>
     </Reference>
