sb4 : new navmes sample using old pipeline

--- a/.gitignore
+++ b/.gitignore
@@ -10,3 +10,7 @@
 /src/sandbox03/ProjectSettings/*
 /src/sandbox03/Temp/*
 /src/sandbox03/Logs/*
+/src/sandbox04/Library/*
+/src/sandbox04/obj/*
+/src/sandbox04/Temp/*
+/src/sandbox04/Logs/*
